--- a/public/scss/style.css
+++ b/public/scss/style.css
@@ -12,12 +12,12 @@
     color: black;
     float: left;
     font-family: 'Reenie Beanie';
-    font-size: 42px; }
+    font-size: 26px; }
   .modal-header3 .closeBtn3 {
     margin: 0px 0px 0px 0px;
     color: black;
     float: right;
-    font-size: 30px; }
+    font-size: 26px; }
     .modal-header3 .closeBtn3:hover, .modal-header3 .closeBtn3:focus {
       color: black;
       text-decoration: none;
@@ -55,7 +55,9 @@
     animation-duration: 0.4s; }
   .modal3 .modal-body3 {
     font-family: 'Cutive Mono';
-    padding-top: 50px; }
+    padding-top: 10px; }
+    .modal3 .modal-body3 #originText {
+      font-size: 14px; }
   @media only screen and (max-width: 570px) {
     .modal3 .modal-content3 {
       background-image: url("IMG_0330.jpg");
@@ -73,14 +75,14 @@
         display: block;
         position: relative; }
         .modal3 .modal-content3 .modal-header3 .headerText3 {
-          font-size: 24px; }
+          font-size: 26px; }
         .modal3 .modal-content3 .modal-header3 .closeBtn3 {
-          font-size: 24px; }
+          font-size: 26px; }
       .modal3 .modal-content3 .modal-body3 {
         position: relative;
         padding: 5%; }
         .modal3 .modal-content3 .modal-body3 #originText {
-          font-size: 12px; } }
+          font-size: 14px; } }
 
 @-webkit-keyframes slideInR {
   from {
@@ -114,12 +116,12 @@
     color: black;
     float: left;
     font-family: 'Reenie Beanie';
-    font-size: 42px; }
+    font-size: 26px; }
   .modal-header1 .closeBtn1 {
     margin: 0px 0px 0px 0px;
     color: black;
     float: right;
-    font-size: 30px; }
+    font-size: 26px; }
     .modal-header1 .closeBtn1:hover, .modal-header1 .closeBtn1:focus {
       color: black;
       text-decoration: none;
@@ -161,7 +163,7 @@
     font-family: 'Cutive Mono'; }
     .modal1 .modal-body1 .intro {
       padding-top: 50px;
-      font-size: 16px; }
+      font-size: 14px; }
   @media only screen and (max-width: 570px) {
     .modal1 .modal-content1 {
       background-image: url("IMG_0330.jpg");
@@ -170,7 +172,6 @@
       background-repeat: no-repeat;
       background-size: cover;
       background-color: rgba(0, 0, 0, 0.5);
-      background-color: gray;
       width: 100%;
       height: 100%;
       padding: 0; }
@@ -179,14 +180,14 @@
         display: block;
         position: relative; }
         .modal1 .modal-content1 .modal-header1 .headerText1 {
-          font-size: 24px; }
+          font-size: 26px; }
         .modal1 .modal-content1 .modal-header1 .closeBtn1 {
-          font-size: 24px; }
+          font-size: 26px; }
       .modal1 .modal-content1 .modal-body1 {
         position: relative;
         padding: 5%; }
         .modal1 .modal-content1 .modal-body1 .intro {
-          font-size: 12px;
+          font-size: 14px;
           padding-top: 0; } }
 
 @-webkit-keyframes slideInR {
@@ -221,12 +222,12 @@
     color: black;
     float: left;
     font-family: 'Reenie Beanie';
-    font-size: 42px; }
+    font-size: 26px; }
   .modal-header4 .closeBtn4 {
     margin: 0px 0px 0px 0px;
     color: black;
     float: right;
-    font-size: 30px; }
+    font-size: 26px; }
     .modal-header4 .closeBtn4:hover, .modal-header4 .closeBtn4:focus {
       color: black;
       text-decoration: none;
@@ -251,7 +252,7 @@
   .modal4 .modal-content4 {
     position: fixed;
     background-color: rgba(0, 0, 0, 0.2);
-    font-size: 30px;
+    font-size: 26px;
     padding: 50px;
     width: 50%;
     height: 25%;
@@ -286,14 +287,14 @@
         display: block;
         position: relative; }
         .modal4 .modal-content4 .modal-header4 .headerText4 {
-          font-size: 24px; }
+          font-size: 26px; }
         .modal4 .modal-content4 .modal-header4 .closeBtn4 {
-          font-size: 24px; }
+          font-size: 26px; }
       .modal4 .modal-content4 .modal-body4 {
         position: relative;
         padding: 5%; }
         .modal4 .modal-content4 .modal-body4 a {
-          font-size: 20px;
+          font-size: 26px;
           text-decoration: none; }
         .modal4 .modal-content4 .modal-body4 ul li {
           list-style: none; } }
@@ -324,30 +325,30 @@
   to {
     opacity: 1; } }
 .resume-coding .resume-coding-header {
-  font-size: 30px;
+  font-size: 26px;
   font-weight: bold; }
 .resume-coding .resume-coding-body {
   padding: 20px;
   padding-left: 10%;
-  font-size: 20px; }
+  font-size: 14px; }
 
 .resume-tools {
   text-align: right; }
   .resume-tools .resume-tools-header {
-    font-size: 30px;
+    font-size: 26px;
     font-weight: bold; }
   .resume-tools .resume-tools-body {
     padding: 20px;
-    font-size: 20px; }
+    font-size: 14px; }
 
 .resume-projects {
   text-align: center; }
   .resume-projects .resume-projects-header {
-    font-size: 30px;
+    font-size: 26px;
     font-weight: bold; }
   .resume-projects .resume-projects-body p {
     padding: 10px;
-    font-size: 20px; }
+    font-size: 14px; }
   .resume-projects .resume-projects-body .video-container {
     position: relative;
     padding-bottom: 56.25%;
@@ -364,21 +365,21 @@
 
 @media only screen and (max-width: 570px) {
   .resume-coding .resume-coding-header {
-    font-size: 20px; }
+    font-size: 26px; }
   .resume-coding .resume-coding-body {
-    font-size: 12px; }
+    font-size: 14px; }
 
   .resume-tools .resume-tools-header {
-    font-size: 20px; }
+    font-size: 26px; }
   .resume-tools .resume-tools-body {
-    font-size: 12px; }
+    font-size: 14px; }
 
   .resume-projects .resume-projects-header {
-    font-size: 20px; }
+    font-size: 26px; }
   .resume-projects .resume-projects-body p {
-    font-size: 12px; }
+    font-size: 14px; }
   .resume-projects .resume-projects-body .game-text p {
-    font-size: 12px; } }
+    font-size: 14px; } }
 .modal-header2 {
   padding: 12px;
   display: inline; }
@@ -387,12 +388,12 @@
     color: black;
     float: left;
     font-family: 'Reenie Beanie';
-    font-size: 42px; }
+    font-size: 26px; }
   .modal-header2 .closeBtn2 {
     margin: 0px 0px 0px 0px;
     color: black;
     float: right;
-    font-size: 30px; }
+    font-size: 26px; }
     .modal-header2 .closeBtn2:hover, .modal-header2 .closeBtn2:focus {
       color: black;
       text-decoration: none;
@@ -432,7 +433,7 @@
     animation-duration: 0.4s; }
   .modal2 .modal-body2 {
     font-family: 'Cutive Mono';
-    font-size: 20px;
+    font-size: 14px;
     padding-top: 50px; }
   @media only screen and (max-width: 570px) {
     .modal2 .modal-content2 {
@@ -451,13 +452,13 @@
         display: block;
         position: relative; }
         .modal2 .modal-content2 .modal-header2 .headerText2 {
-          font-size: 24px; }
+          font-size: 26px; }
         .modal2 .modal-content2 .modal-header2 .closeBtn2 {
-          font-size: 24px; }
+          font-size: 26px; }
       .modal2 .modal-content2 .modal-body2 {
         position: relative;
         padding: 5%;
-        font-size: 12px; } }
+        font-size: 14px; } }
 
 @-webkit-keyframes slideInR {
   from {
@@ -536,7 +537,7 @@ body {
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 28px;
+    font-size: 26px;
     cursor: pointer; }
     body .button1:hover, body .button2:hover, body .button3:hover, body .button4:hover {
       text-decoration: underline;
