--- a/public/scss/_aboutModal.scss
+++ b/public/scss/_aboutModal.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Indie+Flower');
+@import "variables";
 
 .modal-header3
 {
@@ -11,7 +12,7 @@
 		color: black;
 		float:left;
 		font-family: 'Reenie Beanie';
-		font-size:42px;
+		font-size: $headerFontSize;
 
 
 	}
@@ -21,7 +22,7 @@
 		color: black;
 		float:right;
 
-		font-size:30px;
+		font-size: $headerFontSize;
 		&:hover,&:focus
 		{
 			color: black;
@@ -72,7 +73,12 @@
 	.modal-body3
 	{
 		font-family: 'Cutive Mono';
-		padding-top: 50px;
+		padding-top: 10px;
+
+		#originText
+		{
+			font-size: $bodyFontSize;
+		}
 	}
 	@media only screen and (max-width: 570px)
 	{
@@ -100,12 +106,12 @@
 
 				.headerText3
 				{
-					font-size:24px;
+					font-size: $headerFontSize;
 				}
 
 				.closeBtn3
 				{
-					font-size: 24px;
+					font-size: $headerFontSize;
 				}
 			}
 			.modal-body3
@@ -115,7 +121,7 @@
 
 				#originText
 				{
-					font-size: 12px;
+					font-size: $bodyFontSize;
 				}
 			}
 		}
