--- a/public/scss/_blogModal.scss
+++ b/public/scss/_blogModal.scss
@@ -1,3 +1,5 @@
+@import "variables";
+
 .modal-header1
 {
 	padding: 12px;
@@ -9,7 +11,7 @@
 		color: black;
 		float:left;
 		font-family: 'Reenie Beanie';
-		font-size:42px;
+		font-size: $headerFontSize;
 
 	}
 	.closeBtn1
@@ -18,7 +20,7 @@
 		color: black;
 		float:right;
 
-		font-size:30px;
+		font-size: $headerFontSize;
 		&:hover,&:focus
 		{
 			color: black;
@@ -74,7 +76,7 @@
 		.intro
 		{
 			padding-top: 50px;
-			font-size: 16px;
+			font-size: $bodyFontSize;
 		}
 
 	}
@@ -90,8 +92,6 @@
 			background-repeat: no-repeat;
 			background-size: cover;
 			background-color: rgba(0,0,0,0.5);
-
-			background-color: gray;
 			width: 100%;
 			height: 100%;
 			padding: 0;
@@ -105,12 +105,12 @@
 
 				.headerText1
 				{
-					font-size:24px;
+					font-size: $headerFontSize;
 				}
 
 				.closeBtn1
 				{
-					font-size: 24px;
+					font-size: $headerFontSize;
 				}
 			}
 			.modal-body1
@@ -120,7 +120,7 @@
 
 				.intro
 				{
-					font-size: 12px;
+					font-size: $bodyFontSize;
 					padding-top: 0;
 				}
 			}
