--- a/public/scss/_contactModal.scss
+++ b/public/scss/_contactModal.scss
@@ -1,3 +1,5 @@
+@import "variables";
+
 .modal-header4
 {
 	padding: 12px;
@@ -9,7 +11,7 @@
 		color: black;
 		float:left;
 		font-family: 'Reenie Beanie';
-		font-size:42px;
+		font-size: $headerFontSize;
 
 
 	}
@@ -19,7 +21,8 @@
 		color: black;
 		float:right;
 
-		font-size:30px;
+		font-size: $headerFontSize;
+
 		&:hover,&:focus
 		{
 			color: black;
@@ -53,7 +56,7 @@
 		position: fixed;
 		background-color: rgba(0,0,0,0.2);
 
-		font-size: 30px;
+		font-size: $headerFontSize;
 		padding: 50px;
 	//	margin-right: 5%;
 		width: 50%;
@@ -82,7 +85,7 @@
 			}
 	}
 
-	@media only screen and (max-width: 570px)
+	@media only screen and (max-width: 570px) //mobile optimization
 	{
 
 		.modal-content4
@@ -108,12 +111,12 @@
 
 				.headerText4
 				{
-					font-size:24px;
+					font-size: $headerFontSize;
 				}
 
 				.closeBtn4
 				{
-					font-size: 24px;
+					font-size: $headerFontSize;
 				}
 			}
 			.modal-body4
@@ -123,7 +126,7 @@
 
 				a
 				{
-					font-size: 20px;
+					font-size: $headerFontSize; //larger font for contact info
 					text-decoration: none;
 
 				}
