--- a/public/scss/_resumeModal.scss
+++ b/public/scss/_resumeModal.scss
@@ -1,4 +1,5 @@
 @import "resumeModal-text";
+@import "variables";
 
 @import url('https://fonts.googleapis.com/css?family=Indie+Flower');
 @import url('https://fonts.googleapis.com/css?family=Cutive+Mono');
@@ -15,7 +16,7 @@
 		color: black;
 		float:left;
 		font-family: 'Reenie Beanie';
-		font-size:42px;
+		font-size: $headerFontSize;
 
 
 	}
@@ -25,7 +26,7 @@
 		color: black;
 		float:right;
 
-		font-size:30px;
+		font-size: $headerFontSize;
 		&:hover,&:focus
 		{
 			color: black;
@@ -78,7 +79,7 @@
 	.modal-body2
 	{
 		font-family: 'Cutive Mono';
-		font-size: 20px;
+		font-size: $bodyFontSize;
 		padding-top: 50px;
 	}
 
@@ -109,20 +110,20 @@
 
 				.headerText2
 				{
-					font-size:24px;
+					font-size: $headerFontSize;
 				}
 
 				.closeBtn2
 				{
-					font-size: 24px;
+					font-size: $headerFontSize;
 				}
 			}
 			.modal-body2
 			{
 				position: relative;
 				padding: 5%;
-				font-size: 12px;
-			
+				font-size: $bodyFontSize;
+
 			}
 		}
 	}
