--- a/public/scss/variables.scss
+++ b/public/scss/variables.scss
@@ -1,4 +1,13 @@
-//variables
+//imports
+@import url('https://fonts.googleapis.com/css?family=Indie+Flower');
+@import url('https://fonts.googleapis.com/css?family=Reenie+Beanie');
+@import url('https://fonts.googleapis.com/css?family=Cutive+Mono');
+
+//font name variables
+$headerFont: 'Reenie Beanie';
+$bodyFont: 'Cutive Mono';
+
+//font size variables
 $titleFontSize: 48px;
 $headerFontSize: 26px;
 $bodyFontSize: 14px;
