--- a/public/scss/_contactModal.scss
+++ b/public/scss/_contactModal.scss
@@ -10,7 +10,7 @@
 		margin: 0px 0px 0px 0px;
 		color: black;
 		float:left;
-		font-family: 'Reenie Beanie';
+		font-family: $headerFont;
 		font-size: $headerFontSize;
 
 
@@ -75,7 +75,7 @@
 			a
 			{
 					text-decoration: none;
-					font-family: 'Cutive Mono';
+					font-family: $bodyFont;
 
 			}
 
