--- a/public/scss/_resumeModal.scss
+++ b/public/scss/_resumeModal.scss
@@ -15,7 +15,7 @@
 		margin: 0px 0px 0px 0px;
 		color: black;
 		float:left;
-		font-family: 'Reenie Beanie';
+		font-family: $headerFont;
 		font-size: $headerFontSize;
 
 
@@ -78,7 +78,7 @@
 
 	.modal-body2
 	{
-		font-family: 'Cutive Mono';
+		font-family: $bodyFont;
 		font-size: $bodyFontSize;
 		padding-top: 50px;
 	}
