--- a/public/scss/style.css
+++ b/public/scss/style.css
@@ -1,5 +1,23 @@
 @import url("https://fonts.googleapis.com/css?family=Indie+Flower");
 @import url("https://fonts.googleapis.com/css?family=Indie+Flower");
+@import url("https://fonts.googleapis.com/css?family=Reenie+Beanie");
+@import url("https://fonts.googleapis.com/css?family=Cutive+Mono");
+@import url("https://fonts.googleapis.com/css?family=Indie+Flower");
+@import url("https://fonts.googleapis.com/css?family=Reenie+Beanie");
+@import url("https://fonts.googleapis.com/css?family=Cutive+Mono");
+@import url("https://fonts.googleapis.com/css?family=Indie+Flower");
+@import url("https://fonts.googleapis.com/css?family=Reenie+Beanie");
+@import url("https://fonts.googleapis.com/css?family=Cutive+Mono");
+@import url("https://fonts.googleapis.com/css?family=Indie+Flower");
+@import url("https://fonts.googleapis.com/css?family=Reenie+Beanie");
+@import url("https://fonts.googleapis.com/css?family=Cutive+Mono");
+@import url("https://fonts.googleapis.com/css?family=Indie+Flower");
+@import url("https://fonts.googleapis.com/css?family=Reenie+Beanie");
+@import url("https://fonts.googleapis.com/css?family=Cutive+Mono");
+@import url("https://fonts.googleapis.com/css?family=Indie+Flower");
+@import url("https://fonts.googleapis.com/css?family=Reenie+Beanie");
+@import url("https://fonts.googleapis.com/css?family=Cutive+Mono");
+@import url("https://fonts.googleapis.com/css?family=Indie+Flower");
 @import url("https://fonts.googleapis.com/css?family=Cutive+Mono");
 @import url("https://fonts.googleapis.com/css?family=Indie+Flower");
 @import url("https://fonts.googleapis.com/css?family=Reenie+Beanie");
@@ -11,7 +29,7 @@
     margin: 0px 0px 0px 0px;
     color: black;
     float: left;
-    font-family: 'Reenie Beanie';
+    font-family: "Reenie Beanie";
     font-size: 26px; }
   .modal-header3 .closeBtn3 {
     margin: 0px 0px 0px 0px;
@@ -54,7 +72,7 @@
     animation-name: slideInR;
     animation-duration: 0.4s; }
   .modal3 .modal-body3 {
-    font-family: 'Cutive Mono';
+    font-family: "Cutive Mono";
     padding-top: 10px; }
     .modal3 .modal-body3 #originText {
       font-size: 14px; }
@@ -108,6 +126,30 @@
     opacity: 0; }
   to {
     opacity: 1; } }
+.blog_post {
+  position: relative;
+  padding-top: 10px;
+  padding-bottom: 10px; }
+  .blog_post .blog_title {
+    font-size: 26px;
+    text-align: center;
+    font-family: "Reenie Beanie"; }
+  .blog_post .blog_entry {
+    font-size: 14px;
+    text-align: left;
+    font-family: "Cutive Mono";
+    padding-top: 10px;
+    padding-bottom: 10px; }
+  .blog_post .blog_image {
+    padding: 20px;
+    overflow: hidden; }
+    .blog_post .blog_image img {
+      max-width: 100%;
+      height: auto;
+      display: block;
+      margin-left: auto;
+      margin-right: auto; }
+
 .modal-header1 {
   padding: 12px;
   display: inline; }
@@ -115,7 +157,7 @@
     margin: 0px 0px 0px 0px;
     color: black;
     float: left;
-    font-family: 'Reenie Beanie';
+    font-family: "Reenie Beanie";
     font-size: 26px; }
   .modal-header1 .closeBtn1 {
     margin: 0px 0px 0px 0px;
@@ -160,7 +202,7 @@
     animation-name: slideInR;
     animation-duration: 0.4s; }
   .modal1 .modal-body1 {
-    font-family: 'Cutive Mono'; }
+    font-family: "Cutive Mono"; }
     .modal1 .modal-body1 .intro {
       padding-top: 50px;
       font-size: 14px; }
@@ -221,7 +263,7 @@
     margin: 0px 0px 0px 0px;
     color: black;
     float: left;
-    font-family: 'Reenie Beanie';
+    font-family: "Reenie Beanie";
     font-size: 26px; }
   .modal-header4 .closeBtn4 {
     margin: 0px 0px 0px 0px;
@@ -267,7 +309,7 @@
     animation-duration: 0.4s; }
     .modal4 .modal-content4 a {
       text-decoration: none;
-      font-family: 'Cutive Mono'; }
+      font-family: "Cutive Mono"; }
     .modal4 .modal-content4 ul li {
       list-style: none; }
   @media only screen and (max-width: 570px) {
@@ -387,7 +429,7 @@
     margin: 0px 0px 0px 0px;
     color: black;
     float: left;
-    font-family: 'Reenie Beanie';
+    font-family: "Reenie Beanie";
     font-size: 26px; }
   .modal-header2 .closeBtn2 {
     margin: 0px 0px 0px 0px;
@@ -432,7 +474,7 @@
     animation-name: slideInR;
     animation-duration: 0.4s; }
   .modal2 .modal-body2 {
-    font-family: 'Cutive Mono';
+    font-family: "Cutive Mono";
     font-size: 14px;
     padding-top: 50px; }
   @media only screen and (max-width: 570px) {
@@ -486,23 +528,6 @@
     opacity: 1; } }
 body {
   overflow: hidden;
-  	/*.bg
-  	{
-  		z-index:50;
-  		background-image: url("IMG_0330level2.png");
-  		background-position: center;
-  		background-repeat: no-repeat;
-  		background-size: cover;
-  
-  	//	background-color: red;
-  	//	background-color: rgba(0,1,0,0.5);
-  
-  		height: 100%;
-  		width: 100%;
-  		top: 0px;
-  
-  		position: absolute;
-  	}*/
   z-index: 1;
   background-color: rgba(0, 0, 0, 0.5);
   top: 0px;
@@ -529,7 +554,7 @@ body {
     padding-bottom: 20px; }
   body .button1, body .button2, body .button3, body .button4 {
     z-index: 99;
-    font-family: 'Reenie Beanie';
+    font-family: "Reenie Beanie";
     border: none;
     color: black;
     background-color: rgba(0, 0, 0, 0);
@@ -548,6 +573,8 @@ body {
     padding-right: 60%; }
   @media only screen and (max-width: 600px) {
     body {
-      overflow-y: scroll; } }
+      overflow-y: scroll; }
+      body .buttons {
+        margin-top: -90px; } }
 
 /*# sourceMappingURL=style.css.map */
