--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -4,9 +4,6 @@
 @import "resumeModal";
 @import "variables";
 
-@import url('https://fonts.googleapis.com/css?family=Indie+Flower');
-@import url('https://fonts.googleapis.com/css?family=Reenie+Beanie');
-@import url('https://fonts.googleapis.com/css?family=Cutive+Mono');
 
 
 
@@ -28,24 +25,6 @@ body
 	{
 		position: relative;
 	}
-
-	/*.bg
-	{
-		z-index:50;
-		background-image: url("IMG_0330level2.png");
-		background-position: center;
-		background-repeat: no-repeat;
-		background-size: cover;
-
-	//	background-color: red;
-	//	background-color: rgba(0,1,0,0.5);
-
-		height: 100%;
-		width: 100%;
-		top: 0px;
-
-		position: absolute;
-	}*/
 
 	z-index: 1;
 	background-color: rgba(0,0,0,0.5);
@@ -71,7 +50,7 @@ body
 	%buttons-shared
 	{
 		z-index: 99;
-		font-family: 'Reenie Beanie';
+		font-family: $headerFont;
 		border: none;
 		color: black;
 		background-color: rgba(0,0,0,0);
@@ -119,7 +98,11 @@ body
 	{
 		overflow-y: scroll;
 
+		.buttons
+		{
+			margin-top: -90px;
 
+		}
 
 	}
 
