--- a/public/scss/style.css
+++ b/public/scss/style.css
@@ -269,7 +269,8 @@
     margin: 0px 0px 0px 0px;
     color: black;
     float: right;
-    font-size: 26px; }
+    font-size: 26px;
+    font-family: 'Inconsolata'; }
     .modal-header4 .closeBtn4:hover, .modal-header4 .closeBtn4:focus {
       color: black;
       text-decoration: none;
