work on resume modal

--- a/public/scss/_resumeModal-text.scss
+++ b/public/scss/_resumeModal-text.scss
@@ -16,6 +16,18 @@
 
 }
 
+.info
+{
+	font-size: $headerFontSize;
+	padding-bottom: 50px;
+	position: relative;
+	a
+	{
+		text-decoration: none;
+
+	}
+}
+
 .resume-tools
 {
 	text-align: right;
