--- a/public/scss/_contactModal.scss
+++ b/public/scss/_contactModal.scss
@@ -61,7 +61,7 @@
 		padding: 50px;
 	//	margin-right: 5%;
 		width: 50%;
-		height: 25%;
+		height: 10%;
 		right: 0;
 	//	top: 60%;
 		bottom: 0;
@@ -80,7 +80,7 @@
 
 			}
 
-			ul li
+			ul
 			{
 				list-style: none;
 			}
@@ -123,7 +123,6 @@
 			.modal-body4
 			{
 				position: relative;
-				padding: 5%;
 
 				a
 				{
@@ -132,7 +131,7 @@
 
 				}
 
-				ul li
+				ul
 				{
 					list-style: none;
 				}
