--- a/public/scss/variables.scss
+++ b/public/scss/variables.scss
@@ -2,12 +2,14 @@
 @import url('https://fonts.googleapis.com/css?family=Indie+Flower');
 @import url('https://fonts.googleapis.com/css?family=Reenie+Beanie');
 @import url('https://fonts.googleapis.com/css?family=Cutive+Mono');
+@import url('https://fonts.googleapis.com/css?family=Dosis');
 
 //font name variables
 $headerFont: 'Reenie Beanie';
-$bodyFont: 'Cutive Mono';
+$bodyFont: 'Dosis';
 
 //font size variables
 $titleFontSize: 48px;
+$titleFontSizeMobile: 42px;
 $headerFontSize: 26px;
 $bodyFontSize: 14px;
