messing with fonts

--- a/public/scss/_resumeModal-text.scss
+++ b/public/scss/_resumeModal-text.scss
@@ -2,7 +2,7 @@
 
 .info
 {
-	font-size: $headerFontSize;
+	font-size: $bodyFontSizeLarge;
 	padding-bottom: 50px;
 	position: relative;
 	a
@@ -18,7 +18,7 @@
 	text-align: left;
 	.resume-coding-header
 	{
-		font-size: $headerFontSize;
+		font-size: $bodyFontSizeLarge;
 	}
 	.resume-coding-body
 	{
@@ -35,7 +35,7 @@
 
 	.resume-tools-header
 	{
-		font-size: $headerFontSize;
+		font-size: $bodyFontSizeLarge;
 
 	}
 	.resume-tools-body
@@ -51,7 +51,7 @@
 
 	.resume-projects-header
 	{
-		font-size: $headerFontSize;
+		font-size: $bodyFontSizeLarge;
 
 	}
 
