--- a/public/scss/variables.scss
+++ b/public/scss/variables.scss
@@ -2,14 +2,15 @@
 @import url('https://fonts.googleapis.com/css?family=Indie+Flower');
 @import url('https://fonts.googleapis.com/css?family=Reenie+Beanie');
 @import url('https://fonts.googleapis.com/css?family=Cutive+Mono');
-@import url('https://fonts.googleapis.com/css?family=Dosis');
+@import url('https://fonts.googleapis.com/css?family=Crete+Round');
 
 //font name variables
 $headerFont: 'Reenie Beanie';
-$bodyFont: 'Dosis';
+$bodyFont: 'Crete Round';
 
 //font size variables
 $titleFontSize: 48px;
 $titleFontSizeMobile: 42px;
 $headerFontSize: 26px;
 $bodyFontSize: 14px;
+$bodyFontSizeLarge: 18px;
