--- a/public/scss/_blogModal.scss
+++ b/public/scss/_blogModal.scss
@@ -77,7 +77,7 @@
 
 		.intro
 		{
-			padding-top: 50px;
+			padding-top: 5%;
 			font-size: $bodyFontSize;
 		}
 
@@ -123,7 +123,6 @@
 				.intro
 				{
 					font-size: $bodyFontSize;
-					padding-top: 0;
 
 				}
 
