--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -45,6 +45,7 @@ body
 		margin-left: 10%;
 		padding-right: 60%;
 		padding-bottom: 20px;
+		line-height: 1em;
 	}
 
 	%buttons-shared
@@ -66,7 +67,7 @@ body
 
 	.buttons
 	{
-		margin-top: -75px;
+		margin-top: -72px;
 		margin-left: 10%;
 		padding-right: 60%;
 	}
