--- a/public/scss/_contactModal.scss
+++ b/public/scss/_contactModal.scss
@@ -60,12 +60,12 @@
 		padding: 50px;
 	//	margin-right: 5%;
 		width: 30%;
-		height: 10%;
+		height: 12%;
 		right: 0;
 	//	top: 60%;
 		bottom: 0;
 		text-decoration: none;
-		overflow-x: hidden;
+		overflow: hidden;
 		box-shadow: 0 5px 8px 0 rgba(0,0,0,0.2), 0 7px 20px 0 rgba(0,0,0,0.2);
 	  	-webkit-animation-name: slideInR;
     	-webkit-animation-duration: 0.4s;
@@ -80,7 +80,7 @@
 				a
 				{
 					font-family: $bodyFont;
-					font-size: $headerFontSize;
+					font-size: $bodyFontSizeLarge;
 
 				}
 			}
@@ -130,7 +130,7 @@
 					a
 					{
 						font-family: $bodyFont;
-						font-size: $headerFontSize;
+						font-size: $bodyFontSizeLarge;
 					}
 				}
 
