--- a/public/scss/style.css
+++ b/public/scss/style.css
@@ -24,8 +24,6 @@
 @import url("https://fonts.googleapis.com/css?family=Cutive+Mono");
 @import url("https://fonts.googleapis.com/css?family=Crete+Round");
 @import url("https://fonts.googleapis.com/css?family=Indie+Flower");
-@import url("https://fonts.googleapis.com/css?family=Cutive+Mono");
-@import url("https://fonts.googleapis.com/css?family=Indie+Flower");
 @import url("https://fonts.googleapis.com/css?family=Reenie+Beanie");
 @import url("https://fonts.googleapis.com/css?family=Cutive+Mono");
 @import url("https://fonts.googleapis.com/css?family=Crete+Round");
@@ -78,8 +76,8 @@
     animation-name: slideInR;
     animation-duration: 0.4s; }
   .modal3 .modal-body3 {
+    padding-top: 30px;
     font-family: "Crete Round";
-    padding-top: 10px;
     padding-bottom: 50px; }
     .modal3 .modal-body3 #originText {
       font-size: 16px; }
@@ -208,9 +206,9 @@
     animation-name: slideInR;
     animation-duration: 0.4s; }
   .modal1 .modal-body1 {
+    padding-top: 30px;
     font-family: "Crete Round"; }
     .modal1 .modal-body1 .intro {
-      padding-top: 5%;
       font-size: 16px; }
   @media only screen and (max-width: 570px) {
     .modal1 .modal-content1 {
@@ -374,7 +372,7 @@
     opacity: 1; } }
 .info {
   font-size: 20px;
-  padding-bottom: 50px;
+  padding-bottom: 10px;
   position: relative; }
   .info a {
     text-decoration: none; }
@@ -487,7 +485,8 @@
   .modal2 .modal-body2 {
     font-family: "Crete Round";
     font-size: 16px;
-    padding-top: 50px; }
+    margin-top: -4px;
+    padding-top: 30px; }
   @media only screen and (max-width: 570px) {
     .modal2 .modal-content2 {
       background-image: url("IMG_0330.jpg");
