--- a/public/scss/style.css
+++ b/public/scss/style.css
@@ -65,7 +65,7 @@
     background-color: rgba(0, 0, 0, 0.2);
     padding: 50px;
     width: 30%;
-    height: 50%;
+    height: 100%;
     top: 0;
     bottom: 0;
     right: 0;
@@ -79,7 +79,17 @@
     padding-top: 30px;
     font-family: "Crete Round";
     padding-bottom: 50px; }
-    .modal3 .modal-body3 #originText {
+    .modal3 .modal-body3 .intro {
+      display: flex; }
+      .modal3 .modal-body3 .intro .profileImage #me {
+        padding-right: 20px; }
+      .modal3 .modal-body3 .intro .aboutMe {
+        top: 0; }
+        .modal3 .modal-body3 .intro .aboutMe p {
+          font-style: italic; }
+    .modal3 .modal-body3 .originText {
+      padding-top: 10px;
+      display: block;
       font-size: 16px; }
   @media only screen and (max-width: 570px) {
     .modal3 .modal-content3 {
@@ -104,6 +114,10 @@
       .modal3 .modal-content3 .modal-body3 {
         position: relative;
         padding: 5%; }
+        .modal3 .modal-content3 .modal-body3 .intro {
+          display: block; }
+          .modal3 .modal-content3 .modal-body3 .intro .profileImage {
+            text-align: center; }
         .modal3 .modal-content3 .modal-body3 #originText {
           font-size: 16px; } }
 
@@ -231,8 +245,7 @@
           font-size: 26px; }
       .modal1 .modal-content1 .modal-body1 {
         position: relative;
-        padding: 5%;
-        padding-top: 0; }
+        padding: 5%; }
         .modal1 .modal-content1 .modal-body1 .intro {
           font-size: 16px; } }
 
