--- a/public/scss/style.css
+++ b/public/scss/style.css
@@ -313,12 +313,13 @@
     position: fixed;
     background-color: rgba(0, 0, 0, 0.2);
     padding: 50px;
+    margin-right: auto;
     width: 30%;
-    height: 12%;
+    top: 0;
     right: 0;
     bottom: 0;
-    text-decoration: none;
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: scroll;
     box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 7px 20px 0 rgba(0, 0, 0, 0.2);
     -webkit-animation-name: slideInR;
     -webkit-animation-duration: 0.4s;
@@ -331,6 +332,15 @@
       .modal4 .modal-content4 .bodyLinks a {
         font-family: "Crete Round";
         font-size: 20px; }
+    .modal4 .modal-content4 .twitterLogo {
+      display: block;
+      text-align: left; }
+    .modal4 .modal-content4 .instaLogo {
+      display: block;
+      text-align: right; }
+    .modal4 .modal-content4 .linkedinLogo {
+      display: block;
+      text-align: left; }
   @media only screen and (max-width: 570px) {
     .modal4 .modal-content4 {
       background-image: url("IMG_0330.jpg");
